--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "http://influnect.github.io/influnect",
+{
+  "homepage": "http://influnect.github.io/influnect",
   "name": "influnect",
   "version": "1.8.0",
   "description": "Material Kit React. Coded by Creative Tim",
@@ -38,6 +39,8 @@
     "typescript": "3.5.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test --env=jsdom",
